<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#000000">

    <TextView android:text="@string/game_name" android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/gamelogo"
        android:layout_alignParentEnd="false"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/textView" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/edit_name"
        android:id="@+id/name_button"
        android:onClick="startNameActivity"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_below="@+id/screenname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textAlignment="gravity"
        android:gravity="center" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:text="@string/play"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:onClick="startGameActivity"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textSize="60sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/screen_name"
        android:id="@+id/screenname"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="50dp"
        android:visibility="invisible" />


</RelativeLayout>
